--- a/_posts/2023-07-29-anact.md
+++ b/_posts/2023-07-29-anact.md
@@ -10,4 +10,4 @@ category:
 
 À lire en page 13 : ["Logistique – Objectif : fidéliser"](https://www.anact.fr/idee-recue-problemes-dattractivite-renforcons-notre-marque-employeur)
 
-```Comment fidéliser ses travailleurs dans un secteur au fort turnover ? En Gironde, la société Winery Logistique a fait le choix d’impliquer ses équipes dans la réorganisation des ateliers et des heures de travail. Résultat : un gain de productivité… et de sens.```
+> Comment fidéliser ses travailleurs dans un secteur au fort turnover ? En Gironde, la société Winery Logistique a fait le choix d’impliquer ses équipes dans la réorganisation des ateliers et des heures de travail. Résultat : un gain de productivité… et de sens.
