--- a/_posts/2023-07-29-anact.md
+++ b/_posts/2023-07-29-anact.md
@@ -4,7 +4,7 @@ title: "Cahier de l’Anact n°4 : la QVT pour agir sur les problèmes d'attract
 author: 
     - Arthur Gaudron
 category: 
-    - AMI
+    - Culture Industrielle
 ---
 
 
