--- a/_drafts/2023-08-06-CPIM.md
+++ b/_drafts/2023-08-06-CPIM.md
@@ -12,3 +12,5 @@ Deux écoles dans le supply chain management, la one best way, et la contingence
 Le CPIM est issue de la première école.
 
 La préparation au CPIM vise à maitriser les enseignements mais aussi à en mesurer les limites.
+
+La formation permet de préparer la certification, mais sans doute plus important, en allant plus loin que la certification, elle est un socle de base pour continuer à se former : ecole de paris, rfg, hrb, cmr, etc.
